# AssetScope

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  settings.gradle.kts  start-assetscope-server.cmd
.github/workflows/: android-ci.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
gradle/: libs.versions.toml
ios/: README.md  project.yml
ios/AssetScopeIOS/: Info.plist
ios/AssetScopeIOS/Domain/: Models.swift  (+1 more)
samples/: holdings-template.csv  sinopac-card-template.csv
server/: .env.example  README.md  allow-firewall.cmd  allow-firewall.ps1  capture-firstrade-normal-browser.cmd  capture-firstrade.cmd  capture-sinopac-card.cmd  configure-shioaji.cmd  configure-shioaji.ps1  install-startup-task.cmd  install-startup-task.ps1  one-click-start.ps1  pyproject.toml  setup-tailscale.cmd  setup-tailscale.ps1  setup.cmd  setup.ps1  start.cmd  start.ps1  test-shioaji-api.cmd
server/app/: __init__.py  browser_export.py  config.py  download_watcher.py  main.py  models.py  paper_trading.py  portfolio_history.py  service.py  sinopac_browser_export.py
server/app/connectors/: csv_folder.py  exchange_rates.py  firstrade_history.py  price_history.py  shioaji.py  sinopac_card.py
server/app/tools/: __init__.py  shioaji_api_test.py
server/tests/: test_api.py  test_browser_export.py  test_csv_folder.py  test_download_watcher.py  test_exchange_rates.py  test_firstrade_history.py  test_paper_trading.py  test_portfolio_history.py  test_price_history.py  test_shioaji.py  test_sinopac_browser_export.py  test_sinopac_card.py
(+39 files in other folders)
