[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "assetscope-server"
version = "0.1.0"
description = "Read-only personal asset aggregation API for AssetScope."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "pydantic-settings>=2.7,<3",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8.3,<9",
]
shioaji = [
    "shioaji>=1.2,<2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]

